Fix navbar overlap bug in _game.scss Resolved a bug in the _game.scss file that caused the navbar to overlap with the score display in the game section. This fix ensures proper positioning and avoids visual conflicts between the navbar and the score display, improving the overall layout of the webpage.

--- a/scss/layout/_game.scss
+++ b/scss/layout/_game.scss
@@ -1,7 +1,14 @@
-.game {
-    height: 100%;
+.container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 12rem;
+    height: 100%;
+
+    .game {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 8rem;
+    }
 }
